manifests/system/image-cache.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: image-cache
  namespace: rpg-system
spec:
  selector:
    matchLabels:
      app: image-cache
  template:
    metadata:
      labels:
        app: image-cache
    spec:
      priorityClassName: system-node-critical
      terminationGracePeriodSeconds: 0
      containers:
        - name: cache
          image: 319279230668.dkr.ecr.us-west-2.amazonaws.com/krombat/job-runner:latest
          imagePullPolicy: Always
          command: ["sleep", "infinity"]
          resources:
            requests:
              cpu: "1m"
              memory: "4Mi"
            limits:
              cpu: "1m"
              memory: "4Mi"
