manifests/system/node-warmer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-warmer
  namespace: rpg-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node-warmer
  template:
    metadata:
      labels:
        app: node-warmer
    spec:
      priorityClassName: warm-node
      terminationGracePeriodSeconds: 0
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values: [rpg-backend, rpg-frontend, node-warmer]
              topologyKey: kubernetes.io/hostname
      containers:
        - name: pause
          image: 319279230668.dkr.ecr.us-west-2.amazonaws.com/krombat/job-runner:latest
          imagePullPolicy: Always
          command: ["sleep", "infinity"]
          resources:
            requests:
              cpu: "1m"
              memory: "4Mi"
            limits:
              cpu: "1m"
              memory: "4Mi"
